--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -6,8 +6,8 @@
 
     <!-- Reset CSS and Data and Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="./data/css/main.css">
-    <link rel="stylesheet" href="./data/css/footer.css">
+    <link rel="stylesheet" href="Moi/data/css/main.css">
+    <link rel="stylesheet" href="Moi/data/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <title>P2HandA</title> <!-- Tên trang-->
-    <link rel="shortcut icon" href="./data/img/favicon.png"> <!-- Favicon -->
+    <link rel="shortcut icon" href="Moi/data/img/favicon.png"> <!-- Favicon -->
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                  <nav class="header__navbar">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item">
-                            <a href="sp.html">Thương hiệu</a>
+                            <a href="sp.html">Tất cả sản phẩm</a>
                         </li>
                         <li class="header__navbar-item">
                             <a href="#Men">Nam</a>
@@ -70,7 +70,7 @@
                         </li>
                         <li class="header__icons-item">
                             <div class="icons-item">
-                                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                             </div>
                             <div  class="icons-item__text">
                                 <p>Giỏ hàng</p>
@@ -94,7 +94,7 @@
                 <div class="image-img">
                     <div class="img1">
                         <a href="#">
-                            <img src="./data/img/banner/P2HANDA.com.png" alt="anh1">
+                            <img src="Moi/data/img/banner/P2HANDA.com.png" alt="anh1">
                         </a>
                     </div>
 
@@ -105,7 +105,7 @@
                                     <h1>Adidas</h1>
                                     <button class="bt-xem">Xem ngay</button>
                                 </div>
-                                <img src="./data/img/banner/image1.jpg" alt="anh2">
+                                <img src="Moi/data/img/banner/image1.jpg" alt="anh2">
                             </a>
                         </div>
 
@@ -115,7 +115,7 @@
                                     <h1>Nike</h1>
                                     <button class="bt-xem">Xem ngay</button>
                                 </div>
-                                <img src="./data/img/banner/image2.jpg" alt="anh3">
+                                <img src="Moi/data/img/banner/image2.jpg" alt="anh3">
                             </a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                 <div class="image-banner">
                     <div class="image-banner1">
                         <a href="#">
-                            <img src="./data/img/banner/banner.png" alt="anh4">
+                            <img src="Moi/data/img/banner/banner.png" alt="anh4">
                         </a>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                             <!-- Product Sale 1 -->
                             <div class="card">
                                  <div class="relative">
-                                     <img src="./data/img/producthome/AIR JORDAN 1 X OFF-WHITE X RETRO HIGH OG CHICAGO.png" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                     <img src="Moi/data/img/producthome/AIR JORDAN 1 X OFF-WHITE X RETRO HIGH OG CHICAGO.png" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
                                      <div class="badge badge--sale">-70%</div>
                                      <div class="badge badge--new">New</div>
                                 </div>
@@ -156,7 +156,7 @@
                             <!-- Product Sale 2 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/producthome/VANS Old Skool.png" alt="Vans Old Skool Classic Black – Size Nữ Bigsale">
+                                    <img src="Moi/data/img/producthome/VANS Old Skool.png" alt="Vans Old Skool Classic Black – Size Nữ Bigsale">
                                     <div class="badge badge--sale">-70%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
@@ -172,7 +172,7 @@
                            <!-- Product Sale 3 -->
                             <div class="card">
                             <div class="relative">
-                                <img src="./data/img/producthome/Nike Air Force 1 Low White-Grey.png" alt="Nike Air Force 1 Low White/Grey">
+                                <img src="Moi/data/img/producthome/Nike Air Force 1 Low White-Grey.png" alt="Nike Air Force 1 Low White/Grey">
                                 <div class="badge badge--sale">-70%</div>
                                 <div class="badge badge--new">New</div>
                            </div>
@@ -188,7 +188,7 @@
                             <!-- Product Sale 4 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/producthome/Adidas Superstar Running White.png" alt="Adidas Superstar Running White">
+                                    <img src="Moi/data/img/producthome/Adidas Superstar Running White.png" alt="Adidas Superstar Running White">
                                     <div class="badge badge--sale">-70%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
@@ -207,7 +207,7 @@
                     <div class="container__product-best">
                         <div class="besthome">
                             <a href="">
-                                <img src="./data/img/producthome/bannerbestseller.jpg" alt="anh">
+                                <img src="Moi/data/img/producthome/bannerbestseller.jpg" alt="anh">
                             </a>
                         </div>
                         <h1>Best Seller</h1>
@@ -215,7 +215,7 @@
                             <!-- Product BS 1 -->
                             <div class="card">
                                  <div class="relative">
-                                     <img src="./data/img/producthome/Giày Thể Thao Nike Air Monarch IV Cross.png" alt=" Giày Thể Thao Nike Air Monarch IV Cross">
+                                     <img src="Moi/data/img/producthome/Giày Thể Thao Nike Air Monarch IV Cross.png" alt=" Giày Thể Thao Nike Air Monarch IV Cross">
                                      <div class="badge badge--sale">-10%</div>
                                      <div class="badge badge--new">New</div>
                                 </div>
@@ -231,7 +231,7 @@
                             <!-- Product BS 2 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/producthome/Giày Sneaker Casual Adidas Superstar OG Vintage White.png" alt="Giày Sneaker Casual Adidas Superstar OG Vintage White">
+                                    <img src="Moi/data/img/producthome/Giày Sneaker Casual Adidas Superstar OG Vintage White.png" alt="Giày Sneaker Casual Adidas Superstar OG Vintage White">
                                     <div class="badge badge--sale">-15%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
@@ -247,7 +247,7 @@
                            <!-- Product BS 3 -->
                             <div class="card">
                             <div class="relative">
-                                <img src="./data/img/producthome/Giày MLB BIG BALL CHUNKY NEW YORK YANKEES.png" alt="Giày MLB BIG BALL CHUNKY NEW YORK YANKEES" style="object-fit: cover;">
+                                <img src="Moi/data/img/producthome/Giày MLB BIG BALL CHUNKY NEW YORK YANKEES.png" alt="Giày MLB BIG BALL CHUNKY NEW YORK YANKEES" style="object-fit: cover;">
                                 <div class="badge badge--sale">-10%</div>
                                 <div class="badge badge--new">New</div>
                            </div>
@@ -263,7 +263,7 @@
                             <!-- Product BS 4 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/producthome/Giày Thể Thao Secondhand CONVERSE ONE STAR OX UNDERFEATED WHITE.png" alt=" Giày Thể Thao Secondhand CONVERSE ONE STAR OX UNDERFEATED WHITE">
+                                    <img src="Moi/data/img/producthome/Giày Thể Thao Secondhand CONVERSE ONE STAR OX UNDERFEATED WHITE.png" alt=" Giày Thể Thao Secondhand CONVERSE ONE STAR OX UNDERFEATED WHITE">
                                     <div class="badge badge--sale">-30%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
@@ -288,7 +288,7 @@
                                 <h1>Men</h1>
                                 <button class="bt-xem">Xem ngay</button>
                             </div>
-                            <img src="./data/img/producthome/MEN.jpg" alt="anh2">
+                            <img src="Moi/data/img/producthome/MEN.jpg" alt="anh2">
                         </a>
                     </div>
 
@@ -298,7 +298,7 @@
                                 <h1>WOMEN</h1>
                                 <button class="bt-xem">Xem ngay</button>
                             </div>
-                            <img src="./data/img/producthome/WOMEN.png" alt="anh2">
+                            <img src="Moi/data/img/producthome/WOMEN.png" alt="anh2">
                         </a>
                     </div>
 
@@ -308,7 +308,7 @@
                                 <h1>UNISEX</h1>
                                 <button class="bt-xem">Xem ngay</button>
                             </div>
-                            <img src="./data/img/producthome/UNISEX.jpg" alt="anh2">
+                            <img src="Moi/data/img/producthome/UNISEX.jpg" alt="anh2">
                         </a>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
             <div class="featured">
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/medal.png" alt="Cam kết chất lượng">
+                        <img src="Moi/data/img/featured/medal.png" alt="Cam kết chất lượng">
                     </div>
                     <div class="fl__text">
                         <span>Cam Kết Chất Lượng</span>
@@ -329,7 +329,7 @@
                 </div>
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/accreditation.png" alt="Bảo hành">
+                        <img src="Moi/data/img/featured/accreditation.png" alt="Bảo hành">
                     </div>
                     <div class="fl__text">
                         <span>Hỗ Trợ Bảo Hành</span>
@@ -338,7 +338,7 @@
                 </div>
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/money.png" alt="Thanh toán">
+                        <img src="Moi/data/img/featured/money.png" alt="Thanh toán">
                     </div>
                     <div class="fl__text">
                         <span>Thanh Toán </span>
@@ -347,7 +347,7 @@
                 </div>
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/delivery.png" alt="Giao hàng nhanh chóng">
+                        <img src="Moi/data/img/featured/delivery.png" alt="Giao hàng nhanh chóng">
                     </div>
                     <div class="fl__text">
                         <span>Giao Hàng Nhanh Chóng</span>
