--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -43,7 +43,7 @@
                             <a href="#unisex">Unisex</a>
                         </li>
                         <li class="header__navbar-item">
-                            <a href="#blog">Blog</a>
+                            <a href="lienhe.html">Liên hệ</a>
                         </li>
                     </ul>
                  </nav>
