--- a/Homepage/sp.html
+++ b/Homepage/sp.html
@@ -24,47 +24,62 @@
 <body>
     <div class="main">
         <header class="header">
-            <!-- <div class="grid"> -->
-                <!-- Tên Shop -->
-                <a href="Homepage.html" class="name1">P2HandA</a>
-    
-                <!-- Thanh Bar -->
-                 <nav class="header__navbar">
-                    <ul class="header__navbar-list">
-                        <li class="header__navbar-item">
-                            <a href="Homepage.html">Trang chủ</a>
-                        </li>
-                        <li class="header__navbar-item">
-                            <a href="sp.html">Sản phẩm</a>
-                        </li>
-                        <li class="header__navbar-item">
-                            <a href="lienhe.html">Liên hệ</a>
-                        </li>
-                    </ul>
-                 </nav>
-    
-                <!-- Navbar Icon -->
-                 <nav class="header__icons">
-                    <ul class="header__icons-list">
-                        <li class="header__icons-item">
-                            <div class="icons-item">
-                                <i class="fa-solid fa-user fa-2x"></i>
-                                <a href="login.html"><span>Đăng nhập</span></a>
-                            </div>
-                        </li>
-                        </li>
-                        <li class="header__icons-item">
-                            <div class="icons-item">
-                                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                            </div>
-                            <div  class="icons-item__text">
-                                <a href="cart.html"><span>Giỏ hàng</span></a>
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
-            <!-- </div> -->
-        </header>
+            <!-- Tên Shop -->
+            <a href="homepage.html" class="name">P2HandA</a>
+
+            <!-- Thanh Bar -->
+             <nav class="header__navbar">
+                <ul class="header__navbar-list">
+                    <li class="header__navbar-item">
+                        <a href="sp.html">Tất cả sản phẩm</a>
+                    </li>
+                    <li class="header__navbar-item">
+                        <a href="#Men">Nam</a>
+                    </li>
+                    <li class="header__navbar-item">
+                        <a href="#Women">Nữ</a>
+                    </li>
+                    <li class="header__navbar-item">
+                        <a href="#unisex">Unisex</a>
+                    </li>
+                    <li class="header__navbar-item">
+                        <a href="lienhe.html">Liên hệ</a>
+                    </li>
+                </ul>
+             </nav>
+
+            <!-- Navbar Icon -->
+             <nav class="header__icons">
+                <ul class="header__icons-list">
+                    <li class="header__icons-item">
+                        <div class="icons-item">
+                            <a href="login.html"><i class="fa-solid fa-user"></i></a>
+                        </div>
+                        <div class="icons-item__text">
+                            <p>Tài khoản</p>
+                            <span>Đăng nhập</span>
+                        </div>
+                    </li>
+                    <li class="header__icons-item">
+                        <div class="icons-item">
+                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        </div>
+                        <div  class="icons-item__text">
+                            <span>Tìm kiếm sản phẩm</span>
+                        </div>
+                    </li>
+                    <li class="header__icons-item">
+                        <div class="icons-item">
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                        </div>
+                        <div  class="icons-item__text">
+                            <p>Giỏ hàng</p>
+                            <span>0 sản phẩm</span>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+    </header>
             <!-- Content -->
             <div class="container">
                 <div class="chinh-sach">
