--- a/Homepage/lienhe.html
+++ b/Homepage/lienhe.html
@@ -24,7 +24,7 @@
         <!-- Header -->
         <header class="header">
             <!-- Tên Shop -->
-            <a href="homepage.html" class="name">P2HandA</a>
+            <a href="Homepage.html" class="name">P2HandA</a>
 
             <!-- Thanh Bar -->
              <nav class="header__navbar">
