--- a/Homepage/sp.html
+++ b/Homepage/sp.html
@@ -25,7 +25,7 @@
     <div class="main">
         <header class="header">
             <!-- Tên Shop -->
-            <a href="homepage.html" class="name1">P2HandA</a>
+            <a href="Homepage.html" class="name1">P2HandA</a>
 
             <!-- Thanh Bar -->
              <nav class="header__navbar">
