--- a/Homepage/lienhe.html
+++ b/Homepage/lienhe.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <title>P2HandA</title> <!-- Tên trang-->
-    <link rel="shortcut icon" href="./data/img/favicon.png"> <!-- Favicon -->
+    <link rel="shortcut icon" href="Moi/data/img/favicon.png"> <!-- Favicon -->
 </head>
 
 <body>
