--- a/Homepage/lienhe.html
+++ b/Homepage/lienhe.html
@@ -85,9 +85,9 @@
             <div class="chinh-sach">
                 <h1>Thông tin liên hệ</h1>
                 <ul>
-                    <li><a href="#" style="color: red;">Trang chủ</a></li>
+                    <li><a href="Homepage.html" style="color: red;">Trang chủ</a></li>
                     <li>/</li>
-                    <li><a href="#" style="color: red;">Liên hệ</a></li>
+                    <li><a href="lienhe.html" style="color: red;">Liên hệ</a></li>
                 </ul>
             </div>
 
